[project]
name = "duplicate-question-pairs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "distance>=0.1.3",
    "fuzzywuzzy>=0.18.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "nltk>=3.9.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.1.2",
]
